<resources>
    <string name="app_name">AnimeLock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_credentials_to_login">Enter your credentials here to login</string>
    <string name="Username">Username</string>
    <string name="username">username…</string>
    <string name="Password">Password</string>
    <string name="password">password…</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? sign up here</string>
    <string name="AnimeLock">AL</string>
    <string name="MainPagelogin">Log In</string>
    <string name="main_page_sign_up">Sign Up</string>
    <string name="sign_up_now">Create An Account</string>
    <string name="SignUpUsername">Username</string>
    <string name="email">Email</string>
    <string name="SignUpPassword">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign in</string>
    <string name="already_have_an_account_log_in">Already have an account? log in here</string>
    <string name="animelock">Animelock</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="popular_anime">Popular Anime</string>
    <string name="user_button" />
    <string name="notification_button" />
    <string name="recommended_anime">Recommended Anime</string>
    <string name="animelockh">AnimeLock</string>
    <string name="home">Home</string>
    <string name="your_watchlist_is_empty">Your watchlist is empty</string>
    <string name="animelockwl">AnimeLock</string>
    <string name="watching">Watching</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="planned">Planned</string>
    <string name="dropped">Dropped</string>
    <string name="watchlist">Watchlist</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="post">Post</string>
    <string name="community">Community</string>
    <string name="featured_anime">Featured</string>
    <string name="anime_genres">Genre</string>
    <string name="trending_anime">Trending</string>
    <string name="new_releases">New Releases</string>
    <string name="search_button">Search</string>
    <string name="search">Search...</string>
    <string name="Discovery">Discovery</string>
    <string name="event_name">Event Name</string>
    <string name="event_time">Event Time</string>
    <string name="events">Events</string>
    <string name="Events">Events</string>
    <string name="Eventss">Events:</string>
    <string name="mal_client_id">ccf5d159aca09eaaed5c23f05fdd29f4</string>
    <string name="usernameprofile">Username</string>
    <string name="userBio">This is the user\'s bio.</string>
    <string name="profile_picture">pfp</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="edit_bio_hint">Write something about yourself...</string>
    <string name="save">Save</string>
    <string name="status">Status:</string>
    <string name="anime_title">Anime Title</string>
    <string name="anime_description">Anime Description</string>
    <string name="statuss">Status: %s</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="statusdropdown">Status</string>
    <string name="episodes_watched">Episodes Watched: %d</string>
    <string name="rating_1_10_stars">Rating (1–8 stars)</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="savetowatchlist">Save</string>
    <string name="start_date">Start Date</string>
    <string name="anime_title_date">Anime Title</string>
    <string name="no_anime_started_on_this_date">No anime started on this date.</string>
    <string name="started_on">I started on:</string>
    <string name="Seasonal">Seasonal</string>
    <string name="discussion_title">Discussion Title</string>
    <string name="posted_on_date">Posted on Date</string>
    <string name="number_of_posts_0">Number of Posts: 0</string>
    <string name="date">Date</string>
    <string name="by_author">By: %s</string>
    <string name="full_discussion">Full Discussion Content</string>
    <string name="type">Type: %1$s</string>
    <string name="episodes">Episodes: %1$d</string>
    <string name="airing_dates">Aired: %1$s - %2$s</string>
    <string name="genres">Genres: %1$s</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_message_goes_here">Notification message goes here.</string>
    <string name="completed_anime">Completed Anime</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="more_event_info_goes_here">More event info goes here...</string>

</resources>