<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/user_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/user_button"
                android:src="@drawable/outline_doorbell_24"
                android:padding="8dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/animelockh"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center" />

            <ImageButton
                android:id="@+id/notification_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notification_button"
                android:src="@drawable/baseline_alarm_24"
                android:padding="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Filters Layout -->
    <LinearLayout
        android:id="@+id/layout_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        android:padding="8dp">

        <Button
            android:id="@+id/button_filter_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            style="@style/FilterButtonStyle"
            android:textStyle="bold"
            android:text="@string/all"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/button_filter_watching"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            style="@style/FilterButtonStyle"
            android:textStyle="bold"
            android:text="@string/watching"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/button_filter_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/FilterButtonStyle"
            android:textSize="11sp"
            android:textStyle="bold"
            android:text="@string/completed"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/button_filter_planned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="13sp"
            android:textStyle="bold"
            style="@style/FilterButtonStyle"
            android:text="@string/planned"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/button_filter_dropped"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/FilterButtonStyle"
            android:textStyle="bold"
            android:textSize="13sp"
            android:text="@string/dropped"/>
    </LinearLayout>


    <!-- RecyclerView for Watchlist -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_watchlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"/>
</LinearLayout>

