<?xml version="1.0" encoding="utf-8"?>
<!-- activity_main.xml -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- App Icon -->

    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="276dp"
        android:layout_height="278dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/AnimeLock" />

    <!-- Login Button -->
    <Button
        android:id="@+id/button_login"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:text="@string/MainPagelogin"
        android:layout_below="@id/image_app_icon"
        android:layout_marginTop="50dp"
        android:layout_marginStart="85dp"
        android:background="@color/black"

        android:layout_marginEnd="32dp"/>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/button_signup"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_below="@id/button_login"
        android:layout_marginStart="85dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/main_page_sign_up" />

</RelativeLayout>