<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animelock_bg"
    android:orientation="vertical"
    android:padding="0dp">

    <!-- Toolbar layout for app name and buttons -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/user_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/user_button"
                android:src="@drawable/outline_doorbell_24"
                android:padding="8dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/animelockh"
                android:textStyle="bold|italic"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:gravity="center"
                />


            <ImageButton
                android:id="@+id/notification_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/notification_button"
                android:src="@drawable/baseline_alarm_24"
                android:padding="8dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="10dp"/>


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <Spinner
        android:id="@+id/spinnerTopicFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!-- RecyclerView to display discussions -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDiscussions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <!-- EditText for user input -->
    <EditText
        android:id="@+id/editTextDiscussion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_s_on_your_mind"
        android:padding="10dp"
        android:minHeight="48dp" />

    <!-- Button to post discussion -->
    <Button
        android:id="@+id/buttonPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:layout_gravity="end" />
</LinearLayout>
